--- a/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/DetalleUsuario.xhtml
@@ -22,7 +22,7 @@
 <h:form id="idDatosEmpleado">
 		
 		
-	<ul class="list-group">
+	<ul class="list-group" style="text-align:center">
 	  <li class="list-group-item active">Datos empleado</li>
 	  <li class="list-group-item">Id: #{usuario.id}</li>
 	  <li class="list-group-item">Usuario: #{usuario.usuarioSeleccionado.usuario}</li>
