Se mejora el Alta de Usuario

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -8,11 +8,7 @@
       
 
 <h:head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<style>
-h2{color:red}
-
-</style>
+<h:outputStylesheet name="css/bootstrap.min.css"/>
 </h:head> 
 <body> 
 
@@ -20,64 +16,55 @@ h2{color:red}
 
 <h:form id="idDatosEmpleado">
 		
-			
-		<h:panelGrid  cellpadding="3" style="display:block"  columns="3" row="50" cellspacing = "1">
-
-			<h:outputLabel  value="Username" />
-			<h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuario}" />
-			<h:message for="usuario" style="color:red" />
-			
-			<h:outputLabel value="Nombre" />
-			<h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="50" disabled="false" value="#{usuario.nombre}" />
-			<h:message for="nombre" style="color:red" />
-
-			<h:outputLabel value="Password" />
-			<h:inputSecret id="password" type="password" required="true" placeholder="Ingrese la password" maxlength="50" disabled="false" value="#{usuario.pass}" />
-			<h:message for="password" style="color:red" />
-
-			<h:outputLabel value="Apellido" />
-			<h:inputText id="apellido" required="true" placeholder="Ingrese un apellido" maxlength="50" disabled="false" value="#{usuario.apellido}" />
-			<h:message for="apellido" style="color:red" />
-			
-			<h:outputLabel value="Estado" />
-			<h:inputText id="estado" required="true" disabled="true" value="ACTIVO" />
-			<h:message for="estado" style="color:red" />
 		
-			<h:outputLabel value="Tipo de Documento" />	
+	<ul class="list-group" style="text-align:center">
+	  <li class="list-group-item active">Alta de Empleado</li>
+	  <li class="list-group-item">Usuario:
+	  <h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuario}" />
+	  </li>
+	  <li class="list-group-item">Password: 
+	  	  <h:inputText id="password" required="true" placeholder="Ingrese una password" maxlength="80" disabled="false" value="#{usuario.pass}" />
+	  </li>
+	  <li class="list-group-item">Nombre: 
+	  	  <h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="80" disabled="false" value="#{usuario.nombre}" />
+	  </li>
+	  <li class="list-group-item">Apellido:
+	  	  	  <h:inputText id="apellido" required="true" placeholder="Ingrese un apellido" maxlength="80" disabled="false" value="#{usuario.apellido}" />
+	  </li>
+	  <li class="list-group-item">Estado: 
+	   <h:inputText id="estado" required="true" maxlength="80" disabled="true" value="ACTIVO"/>
+	  </li>
+	  <li class="list-group-item">Tipo de Documento: 
 			<h:selectOneMenu value="#{usuario.tipodoc}" >
    				<f:selectItem itemValue="CI" itemLabel="CI" />
    				<f:selectItem itemValue="PASAPORTE" itemLabel="Pasaporte" />
    				<f:selectItem itemValue="OTROS" itemLabel="Otros" />
-			</h:selectOneMenu><br/>
-								
-			<h:outputLabel value="Numero de Documento" />
-			<h:inputText id="numeroDoc"  required="true" placeholder="Ingrese un numero de documento" maxlength="50" disabled="false" value="#{usuario.numerodoc}" />
-			<h:message for="numeroDoc" style="color:red" />
-
-			<h:outputLabel value="Direccion" />
-			<h:inputText id="direccion" required="true" placeholder="Ingrese la direccion del usuario" maxlength="50" disabled="false" value="#{usuario.direccion}" />
-			<h:message for="direccion" style="color:red" />
-			
-			<h:outputLabel value="Mail" />
-			<h:inputText id="mail" required="true" type="email" placeholder="Ingrese el mail del usuario" maxlength="100" disabled="false" value="#{usuario.mail}" />
-			<h:message for="mail" style="color:red" />
-			
-			<h:outputLabel value="Tipo de Usuario" />	
-			<h:selectOneMenu value="#{usuario.tipousuario}">
+			</h:selectOneMenu><br/> 
+	  </li>
+	  <li class="list-group-item">Documento: 
+	  	<h:inputText id="numeroDoc"  required="true" placeholder="Ingrese un numero de documento" maxlength="50" disabled="false" value="#{usuario.numerodoc}" />
+	  </li>
+	  <li class="list-group-item">Direccion:
+	  	<h:inputText id="direccion" required="true" placeholder="Ingrese la direccion del usuario" maxlength="50" disabled="false" value="#{usuario.direccion}" />
+	  </li>
+	  <li class="list-group-item">Mail: 
+	  	<h:inputText id="mail" required="true" type="email" placeholder="Ingrese el mail del usuario" maxlength="100" disabled="false" value="#{usuario.mail}" />
+	  </li>
+	  <li class="list-group-item">Tipo de Usuario: 
+	  	<h:selectOneMenu value="#{usuario.tipousuario}">
    				<f:selectItem itemValue="ADMINISTRADOR" itemLabel="Administrador" />
    				<f:selectItem itemValue="EXPERTO" itemLabel="Experto" />
    				<f:selectItem itemValue="VOLUNTARIO" itemLabel="Voluntario" />
-			</h:selectOneMenu><br/><br/><br/>
-
-
-		</h:panelGrid>
+			</h:selectOneMenu>
+	  </li>
+	</ul>
+	
+	<h:commandButton id="idVolver" value="Volver"	action="GestionUsuarios.xhtml" class="btn btn-outline-dark" /> 
+		<h:commandButton id="idAlta"  value="Dar de alta" action="#{usuario.crearUsuario()}" class="btn btn-outline-dark"/>
 		
-		<h:messages   style="color:green;margin:8px;" />
+		<h:messages   style="color:red;margin:8px;" />
 		
-		<h:commandButton id="idVolver" value="Volver"	action="GestionUsuarios.xhtml" style="width:150px;height:20px" /> 
-		<h:commandButton id="idAlta"  value="Dar de alta" action="#{usuario.crearUsuario()}" style="width:150px;height:20px">
 		
-		</h:commandButton> 
 	</h:form>
 
 </body> 
