--- a/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/AltaUsuario.xhtml
@@ -12,18 +12,16 @@
 </h:head> 
 <body> 
 
-<h2>Datos Usuario</h2>
-
 <h:form id="idDatosEmpleado">
 		
 		
 	<ul class="list-group" style="text-align:center">
-	  <li class="list-group-item active">Alta de Empleado</li>
+	  <li class="list-group-item active">Alta de Usuario</li>
 	  <li class="list-group-item">Usuario:
 	  <h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuario}" />
 	  </li>
 	  <li class="list-group-item">Password: 
-	  	  <h:inputText id="password" required="true" placeholder="Ingrese una password" maxlength="80" disabled="false" value="#{usuario.pass}" />
+	  	  <h:inputSecret  id="password" required="true" placeholder="Ingrese una password" maxlength="80" disabled="false" value="#{usuario.pass}" />
 	  </li>
 	  <li class="list-group-item">Nombre: 
 	  	  <h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="80" disabled="false" value="#{usuario.nombre}" />
@@ -59,12 +57,13 @@
 	  </li>
 	</ul>
 	
+	<div style="display:block; text-align:center; margin-top: 20px" >
 	<h:commandButton id="idVolver" value="Volver"	action="GestionUsuarios.xhtml" class="btn btn-outline-dark" /> 
-		<h:commandButton id="idAlta"  value="Dar de alta" action="#{usuario.crearUsuario()}" class="btn btn-outline-dark"/>
-		
+	<h:commandButton id="idAlta"  value="Dar de alta" style="margin-left: 40px" action="#{usuario.crearUsuario()}" class="btn btn-outline-dark"/>
+	</div>
+	
 		<h:messages   style="color:red;margin:8px;" />
-		
-		
+				
 	</h:form>
 
 </body> 
