--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -6,83 +6,72 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"> 
 
-<h:head></h:head> 
+<h:head>
+<h:outputStylesheet name="css/bootstrap.min.css"/>
+</h:head> 
 <body> 
 <f:metadata>
     <f:viewParam name="id" value="#{usuario.id}" />
     <f:event type="preRenderView" listener="#{usuario.preRenderViewListener()}"/>
 </f:metadata>
 
+<h:form id="idDatosEmpleado2">
 
-
-<h2>Datos Empleado</h2>
-
-<h:form id="idDatosEmpleado">
-		
-			
-		<h:panelGrid columns="3">
-
-			<h:outputLabel  value="Id" />
-			<h:inputText id="id"  disabled="true" value="#{usuario.id}" />
-			<h:message for="id" style="color:red" />
-			
-			<h:outputLabel  value="Username" />
-			<h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.usuario}" />
-			<h:message for="usuario" style="color:red" />
-			
-			<h:outputLabel value="Nombre" />
-			<h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.nombre}" />
-			<h:message for="nombre" style="color:red" />
-
-			<h:outputLabel value="Password" />
-			<h:inputSecret id="password" type="password" required="true" placeholder="Ingrese la password" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.pass}" />
-			<h:message for="password" style="color:red" />
-
-			<h:outputLabel value="Apellido" />
-			<h:inputText id="apellido" required="true" placeholder="Ingrese un apellido" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.apellido}" />
-			<h:message for="apellido" style="color:red" />
-			
-			<h:outputLabel value="Estado" />
-			<h:inputText id="estado" required="true" disabled="true" value="ACTIVO" />
-			<h:message for="estado" style="color:red" />
-		
-			<h:outputLabel value="Tipo de Documento" />
-			<h:selectOneMenu value="#{usuario.usuarioSeleccionado.tipodoc}">
+<ul class="list-group" style="text-align:center">
+	  <li class="list-group-item active">Modificacion de Usuario</li>
+	  <li class="list-group-item">Id:
+	  <h:inputText id="id" required="true" placeholder="Id" maxlength="80" disabled="true" value="#{usuario.usuarioSeleccionado.id}" />
+	  </li>
+	  <li class="list-group-item">Usuario:
+	  <h:inputText id="usuario" required="true" placeholder="Ingrese un username" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.usuario}" />
+	  </li>
+	  <li class="list-group-item">Password: 
+	  	  <h:inputSecret id="password" required="true" placeholder="Ingrese una password" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.pass}" />
+	  </li>
+	  <li class="list-group-item">Nombre: 
+	  	  <h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.nombre}" />
+	  </li>
+	  <li class="list-group-item">Apellido:
+	  	  	  <h:inputText id="apellido" required="true" placeholder="Ingrese un apellido" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.apellido}" />
+	  </li>
+	  <li class="list-group-item">Estado: 
+	   <h:inputText id="estado" required="true" maxlength="80" disabled="true" value="ACTIVO"/>
+	  </li>
+	  <li class="list-group-item">Tipo de Documento: 
+			<h:selectOneMenu value="#{usuario.usuarioSeleccionado.tipodoc}" >
    				<f:selectItem itemValue="CI" itemLabel="CI" />
-   				<f:selectItem itemValue="Pasaporte" itemLabel="Pasaporte" />
-   				<f:selectItem itemValue="Otros" itemLabel="Otros" />
-			</h:selectOneMenu><br/>
-								
-			<h:outputLabel value="Numero de Documento" />
-			<h:inputText id="numeroDoc"  required="true" placeholder="Ingrese un numero de documento" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.numerodoc}" />
-			<h:message for="numeroDoc" style="color:red" />
-
-			<h:outputLabel value="Direccion" />
-			<h:inputText id="direccion" required="true" placeholder="Ingrese la direccion del usuario" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.direccion}" />
-			<h:message for="direccion" style="color:red" />
-			
-			<h:outputLabel value="Mail" />
-			<h:inputText id="mail" required="true" type="email" placeholder="Ingrese el mail del usuario" maxlength="100" disabled="false" value="#{usuario.usuarioSeleccionado.mail}" />
-			<h:message for="mail" style="color:red" />
-			
-			<h:outputLabel value="Tipo de Usuario" />
-			<h:selectOneMenu value="#{usuario.usuarioSeleccionado.tipousuario.nombre}">
+   				<f:selectItem itemValue="PASAPORTE" itemLabel="Pasaporte" />
+   				<f:selectItem itemValue="OTROS" itemLabel="Otros" />
+			</h:selectOneMenu><br/> 
+	  </li>
+	  <li class="list-group-item">Documento: 
+	  	<h:inputText id="numeroDoc"  required="true" placeholder="Ingrese un numero de documento" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.numerodoc}" />
+	  </li>
+	  <li class="list-group-item">Direccion:
+	  	<h:inputText id="direccion" required="true" placeholder="Ingrese la direccion del usuario" maxlength="50" disabled="false" value="#{usuario.usuarioSeleccionado.direccion}" />
+	  </li>
+	  <li class="list-group-item">Mail: 
+	  	<h:inputText id="mail" required="true" type="email" placeholder="Ingrese el mail del usuario" maxlength="100" disabled="false" value="#{usuario.usuarioSeleccionado.mail}" />
+	  </li>
+	  <li class="list-group-item">Tipo de Usuario: 
+	  	<h:selectOneMenu value="#{usuario.usuarioSeleccionado.tipousuario.nombre}">
    				<f:selectItem itemValue="ADMINISTRADOR" itemLabel="Administrador" />
    				<f:selectItem itemValue="EXPERTO" itemLabel="Experto" />
    				<f:selectItem itemValue="VOLUNTARIO" itemLabel="Voluntario" />
-			</h:selectOneMenu><br/><br/>
+			</h:selectOneMenu>
+	  </li>
+	</ul>
+	
+	<div style="display:block; text-align:center; margin-top: 20px" >
+	<h:commandButton id="idVolver" value="Volver"	action="GestionUsuarios.xhtml" class="btn btn-outline-dark" /> 
+	<h:commandButton id="idModificar"  value="Modificar" style="margin-left: 40px" action="#{usuario.actualizarUsuario(usuario.usuarioSeleccionado)}" class="btn btn-outline-dark">
+	<f:param name="id" value="${usuario.id}" />
+    	</h:commandButton>
+	</div>
+	
+	<h:messages   style="color:red;margin:8px;" />
 
-
-		</h:panelGrid>
-		
-		<h:messages   style="color:Green;margin:8px;" />
-		
-		<h:commandButton id="idVolver" value="Volver"	action="GestionUsuarios" /> 
-		<h:commandButton id="idModificar"  value="Modificar" action="#{usuario.actualizarUsuario(usuario.usuarioSeleccionado)}">
-    			<f:param name="id" value="${usuario.id}" />
-    	</h:commandButton> 
-		
-	</h:form>
+</h:form>
 
 </body> 
 </html>
