--- a/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/GestionUsuarios.xhtml
@@ -22,6 +22,9 @@
 		
 			<!--<h:outputLabel value="Nombre" />
 			<h:inputText id="nombre" value="#{usuario.usuario}" />-->
+			
+		<p>Welcome #{usuario.usuario}</p>
+		<h:commandLink action="#{usuario.logout}" value="Logout" class="btn btn-outline-dark"></h:commandLink>
 
 		</h:panelGrid>
 		<h:commandButton value="Buscar"	action="#{usuario.seleccionarUsuarios()}" class="btn btn-outline-dark"/>
