--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Login.xhtml
@@ -27,7 +27,7 @@
 	</ul>
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >
-	<h:commandButton id="idIngresar"  value="Ingresar" style="margin-left: 40px" action="#{usuario.Login()}" class="btn btn-outline-dark"/>
+	<h:commandButton id="idIngresar"  value="Ingresar" style="margin-left: 40px" action="#{usuario.Login}" class="btn btn-outline-dark"/>
 	</div>
 	
 		<h:messages   style="color:red;margin:8px;" />
