Se actualiza el index.html

--- a/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/ModificarUsuario.xhtml
@@ -29,7 +29,7 @@
 	  	  <h:inputSecret id="password" required="true" placeholder="Ingrese una password" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.pass}" />
 	  </li>
 	  <li class="list-group-item">Nombre: 
-	  	  <h:inputText id="nombre" required="true" placeholder="Ingrese un nombre" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.nombre}" />
+	  	  <h:inputText id="nombre" required="true" requiredMessage="Password is required" placeholder="Ingrese un nombre" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.nombre}" />
 	  </li>
 	  <li class="list-group-item">Apellido:
 	  	  	  <h:inputText id="apellido" required="true" placeholder="Ingrese un apellido" maxlength="80" disabled="false" value="#{usuario.usuarioSeleccionado.apellido}" />
