--- a/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionUsuarios/Index.xhtml
@@ -30,7 +30,7 @@
           </li>
           <li>
             <div class="badge badge-info">
-             #{usuario.usuario} 
+             #{usuario.tipousuario} 
              </div>
           </li>
         </ul>
