--- a/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/ModificarObservacion.xhtml
@@ -4,10 +4,12 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1"> 
+      xmlns:c="http://java.sun.com/jsp/jstl/core_1_1" 
+      xmlns:p="http://primefaces.org/ui">
 
 <h:head>
 <h:outputStylesheet name="css/bootstrap.min.css"/>
+
 </h:head> 
 <body> 
 <f:metadata>
@@ -28,8 +30,8 @@
 	  <li class="list-group-item">Usuario: 
 	  	  <h:inputText id="usuario" required="true" maxlength="80" disabled="true" value="#{observacion.observacionSeleccionada.usuario.usuario}" />
 	  </li>
-	  <li class="list-group-item">Fecha: 
-	  	  <h:inputText id="fecha" required="true" maxlength="80" disabled="false" value="#{observacion.NuevaFecha(observacion.observacionSeleccionada.fecha)}" />
+	  <li class="list-group-item">Fecha:
+			<p:calendar id="inline" value="#{observacion.observacionSeleccionada.fecha}" mode="popup" pattern="dd/MM/yyyy"/>
 	  </li>
 	  <li class="list-group-item">Fenomeno: 
 			<h:selectOneMenu value="#{observacion.observacionSeleccionada.fenomeno.nombreFen}" >
@@ -63,7 +65,8 @@
 	  </li>
 	  <li class="list-group-item">Altitud: 
 	  	<h:inputText id="Altitud" required="true"  maxlength="100" disabled="false" value="#{observacion.observacionSeleccionada.altitud}" />
-	  </li>  
+	  </li>
+	  
 	</ul>	
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >
