fix validacion tipo de usuario

--- a/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionObservaciones/DetalleObservacion.xhtml
@@ -36,10 +36,9 @@
 	
 	<div style="display:block; text-align:center; margin-top: 20px" >	
 	<h:link value="Volver" outcome="ListadoObservaciones.xhtml" class="btn btn-outline-dark" />
-		<h:commandButton id="idModificar"  value="Editar Informacion" style="margin-left: 40px" action="ModificarObservacion.xhtml" class="btn btn-outline-dark">
+	<h:commandButton id="idModificar"  value="Editar Informacion" style="margin-left: 40px" disabled="#{observacion.VerificarTipo()}" action="ModificarObservacion.xhtml" class="btn btn-outline-dark">
 	<f:param name="id" value="${observacion.id}" />
-    	</h:commandButton>	   	
-
+	 </h:commandButton>	
 	</div>
 		<h:messages style="color:red;margin:8px;" />
 		
