fix filtros del listados

--- a/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
+++ b/TareaPDT_JSF/WebContent/GestionReportes/GestionReportes.xhtml
@@ -53,6 +53,9 @@
 		<p:outputLabel value= "Fecha Hasta" style="margin-top: 100px"/>
 			<p:calendar id="hasta" value="#{observacion.hasta}" outcome="#{observacion.hasta}" var="hasta" mode="popup" pattern="dd/MM/yy" style="margin-top: 100px"/>
 			
+			<p:outputLabel value= "Fecha Desde" style="margin-top: 100px"/>
+			<p:calendar id="desde" value="#{observacion.desde}" outcome="#{observacion.desde}" var="desde" mode="popup" pattern="dd/MM/yy" style="margin-top: 100px"/>
+			
 		</h:panelGrid>
 		<h:commandButton value="Buscar"	action="#{observacion.seleccionarObservaciones()}"/>
 		<h:commandLink action="#{usuario.logout}" value="Logout" class="btn btn-outline-dark" style="margin-top: 100px"></h:commandLink>
